# todo-frontend-study

./: .env.app  .eslintrc.json  .gitignore  .prettierrc  README.md  README.old.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
backend/: Dockerfile-dev-backend  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20221219_2205_create_uuid_extension.py  2051f2459d47_remove_relations.py  5ae5a596d406_add_task_table.py  bed2bfeca773_ondelete_cascade.py  dc899d5d43f7_create_tables.py
backend/app/: config.py  main.py
backend/app/api/: categories.py  routers.py  tasks.py
backend/app/crud/: crud_base.py  crud_categories.py  crud_tasks.py
backend/app/database/: connection.py
backend/app/database/models/: __init__.py  category.py  task.py
backend/app/schemas/: __init__.py  base.py  category.py  task.py
frontend/: Dockerfile-dev-frontend  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/helpers/: AppRoutes.tsx
frontend/src/hooks/: useCategories.ts  useLocalStorage.ts  useModal.ts  useThemeMode.ts
frontend/src/interfaces/: basic.ts  category.ts  task.ts
frontend/src/variables/: AppVariables.ts
src/: App.test.tsx  index.css  index.tsx
src/components/: AppRoutes.tsx  ButtonComponent.tsx  ButtonReducerComponent.tsx  Footer.tsx  Header.tsx  Layout.tsx  Main.tsx
src/hooks/: useLocalStorage.ts  useThemeMode.ts
src/interfaces/: category.ts  todo.ts
src/pages/: CategoryPage.tsx  HomePage.tsx
(+32 files in other folders)
