[tool.poetry]
name = "todo app - backend part"
version = "0.1.0"
description = "Simple backend for the client app"
authors = ["Artem Jasan <artem.jasan@applifting.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
psycopg-binary = "^3.1.8"
asyncpg = "^0.27.0"
alembic = "^1.10.3"
sqlalchemy-utils = "^0.40.0"
sqlalchemy = "1.4.47"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
